[gd_scene load_steps=8 format=2]

[ext_resource path="res://title/title.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/ui/title.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/gfx/button_push.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/fonts/button.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sfx/MJ5 SFX - Menu Beep.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/balden_ring_intro_song.mp3" type="AudioStream" id=7]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -62.0
margin_right = 72.5
margin_bottom = 126.0

[node name="Start" type="Button" parent="Buttons"]
margin_right = 145.0
margin_bottom = 60.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "START"

[node name="Options" type="Button" parent="Buttons"]
margin_top = 64.0
margin_right = 145.0
margin_bottom = 124.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "OPTIONS"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 128.0
margin_right = 145.0
margin_bottom = 188.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "QUIT"

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="TitleSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Buttons/Start" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Buttons/Options" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
